fix: performance